--- a/src/Sass/_variables.scss
+++ b/src/Sass/_variables.scss
@@ -69,7 +69,7 @@ $link-txtdecoration: none;
     width: 0;
   }
   to {
-    width: 90%;
+    width: 100%;
   }
 }
 
